Changed Arrays.asList to List.of in ExpressionCreatorTest to avoid some errors.